solve error on deployment make the dashboard work and adding some animation

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -116,5 +116,6 @@
   "annual_gross_sale": "إجمالي المبيعات السنوية في موقعنا",
   "Founder & Chairman": "المؤسس والرئيس",
   "Managing Director": "المدير العام",
-  "Product Designer": "مصمم المنتجات"
+  "Product Designer": "مصمم المنتجات",
+  "browse_by_category": "تصفح حسب الفئة"
 } 
