--- a/locales/en.json
+++ b/locales/en.json
@@ -116,5 +116,6 @@
   "annual_gross_sale": "Annual gross sale on our site",
   "Founder & Chairman": "Founder & Chairman",
   "Managing Director": "Managing Director",
-  "Product Designer": "Product Designer"
+  "Product Designer": "Product Designer",
+  "browse_by_category": "Browse by Category"
 } 
